Fixed #229 by adding Piglin, Piglin Brute and Zombified Piglin NPCs. Fixed #221 by using own trading data set and storing last reset time per NPC. Fixed #210 by making sure default values are set for all actions. Fixed duplicated synched entity data for Raw Zombie entity. Optimized screen background rendering for better performance and compatibility. Optimized data handling by converting some to records. Optimized custom model declaration and handling.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -24,6 +24,8 @@ minecraft {
       workingDirectory project.file('run/client')
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
+      property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
+
       mods {
         easy_npc {
           source sourceSets.main
@@ -46,9 +48,29 @@ minecraft {
       workingDirectory project.file('run/server')
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
+      property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       mods {
         easy_npc {
+          source sourceSets.main
+        }
+      }
+
+      // Mixin Support
+      property 'mixin.env.remapRefMap', 'true'
+      property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+    }
+
+    gameTestServer {
+      jvmArgs "-XX:+AllowEnhancedClassRedefinition"
+      workingDirectory project.file('run')
+
+      property 'forge.logging.markers', 'REGISTRIES'
+      property 'forge.logging.console.level', 'debug'
+      property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
+
+      mods {
+        examplemod {
           source sourceSets.main
         }
       }
@@ -62,6 +84,7 @@ minecraft {
       workingDirectory project.file('run/data')
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
+      property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       args '--mod', "${project.mod_id}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
       mods {
@@ -113,6 +136,9 @@ dependencies {
   }
   if (test_integration_mod && project.immersive_melodies_mod) {
     runtimeOnly fg.deobf("curse.maven:immersive-melodies-904471:${project.immersive_melodies_mod}")
+  }
+  if (test_integration_mod && project.timeless_and_classics_zero_mod) {
+    runtimeOnly fg.deobf("curse.maven:timeless-and-classics-zero-1028108:${project.timeless_and_classics_zero_mod}")
   }
 
   // Additional helpful Mods for development (runtime dependency)
