--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=5.5.0
+version=5.5.1
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -31,6 +31,7 @@ spark_mod=4505375
 jei_mod=4593548
 # Integrations
 test_integration_mod=1
+timeless_and_classics_zero_mod=5529108
 armourers_workshop_mod=4987568
 better_combat_mod=
 #better_combat_mod=4428885
