Improved trading data handling and fixed some issues with the trading data. Lower update tick frequency for better performance. Added automated game-tests for better quality assurance and faster bug detection. Added background entity verification checks for custom models.

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -42,6 +42,11 @@ loom {
       ideConfigGenerated(true)
       runDir("run")
     }
+    gameTest {
+      server()
+      name "Game Test"
+      vmArg "-Dfabric-api.gametest"
+    }
   }
 }
 
