--- a/.github/workflows/game-test.yml
+++ b/.github/workflows/game-test.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: Run game tests
 
 on: [ push, pull_request ]
 
@@ -24,5 +24,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Run GameTests (Fabric)
+        run: ./gradlew :Fabric:runGameTest
+
+      - name: Run GameTests (Forge)
+        run: ./gradlew :Forge:runGameTestServer
