Optimized Workflows and added build badges.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,9 @@
-name: Java CI with Gradle
+name: Build with Gradle
 
 on: [ push, pull_request ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
