Updated Chinese translations. Thanks to @Sunny-Again. Improved trading data handling and fixed some issues with the trading data. Lower update tick frequency for better performance. Added automated game-tests for better quality assurance and faster bug detection. Added background entity verification checks for custom models. Optimized Workflows and added build badges.

--- a/.github/workflows/game-test-forge.yml
+++ b/.github/workflows/game-test-forge.yml
@@ -1,4 +1,4 @@
-name: Build with Gradle
+name: Run game tests on Forge
 
 on: [ push, pull_request ]
 
@@ -27,5 +27,5 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Run GameTests (Forge)
+        run: ./gradlew :Forge:runGameTestServer
