--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -48,6 +48,11 @@ loom {
       ideConfigGenerated(true)
       runDir("run")
     }
+    gameTest {
+      server()
+      name "Game Test"
+      vmArg "-Dfabric-api.gametest"
+    }
   }
 }
 
