--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@ plugins {
   id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.8"
 }
 
+tasks.register('runAllGameTests') {
+  group = 'verification'
+  description = 'Runs both Fabric and Forge game tests.'
+  dependsOn ':Fabric:runGameTest', ':Forge:runGameTestServer', ':NeoForge:runGameTestServer'
+}
+
 subprojects {
 
   apply plugin: 'java'
