--- a/.github/workflows/game-test-fabric.yml
+++ b/.github/workflows/game-test-fabric.yml
@@ -1,4 +1,4 @@
-name: Build with Gradle
+name: Run game tests on Fabric
 
 on: [ push, pull_request ]
 
@@ -21,8 +21,11 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Run GameTests (Fabric)
+        run: ./gradlew :Fabric:runGameTest
