Fixed #308 by adding additional checks for the skin file names. Fixed #307 by improving player skin based cache handling. Fixed #303 by allowing to hide the custom names for NPCs and using empty names. Added additional game tests. Added custom skin data for preparation of upcoming server-side skin support. Added client-side skin chat error messages for easier debugging. Improved dialog command with auto-suggestions for dialog names. Improved player skin rendering by adding UUID validation and better cache handling. Improved fake player by disabling advancement tracking. Removed unneeded data sync for better performance. Removed duplicated skin registration messages.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=5.5.7
+version=5.5.8
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -30,16 +30,16 @@ xaeros_minimap_mod=3712760
 spark_mod=4505375
 jei_mod=4593548
 # Integrations
-timeless_and_classics_zero_mod=5529108
+# timeless_and_classics_zero_mod=5529108
 armourers_workshop_mod=4987568
 better_combat_mod=
 # better_combat_mod=4428885
 # cloth_config_mod=4973439
-create_mod=4835188
-epic_fight_mod=4922082
+# create_mod=4835188
+# epic_fight_mod=4922082
 # framework_mod=4613856
 # mrcrayfishs_gun_mod=4344223
 # player_animator_mod=4418152
-project_mmo_mod=
+# project_mmo_mod=
 # spartan_weaponry_mod=5256293
 immersive_melodies_mod=5499322
