--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=5.5.7
+version=5.5.8
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -33,6 +33,9 @@ jei_mod=5543121
 armourers_workshop_mod=5228929
 better_combat_mod=
 cloth_config_mod=
+cobblemon_mod=4468321
+kotlin_for_forge_mod=4513187
+architectury_api_mod=5137942
 create_mod=
 epic_fight_mod=
 framework_mod=
