--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -26,7 +26,7 @@ minecraft {
       property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
@@ -49,7 +49,7 @@ minecraft {
       property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
@@ -66,7 +66,7 @@ minecraft {
       property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
@@ -84,7 +84,7 @@ minecraft {
 
       args '--mod', "${project.mod_id}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
