Fixed #317 by adding additional checks for edge cases after crashed clients. Fixed random order of main configuration buttons. Fixed overlapping text of Action Data List editor screen. Fixed typing issue with Render Entity Type Support Configuration. Fixed missing update for up and down buttons for Action Data List editor screen within a dialog.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -30,7 +30,7 @@ minecraft {
       property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
@@ -53,7 +53,7 @@ minecraft {
       property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
@@ -70,7 +70,7 @@ minecraft {
       property 'forge.enabledGameTestNamespaces', "${project.mod_id}"
 
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
@@ -88,7 +88,7 @@ minecraft {
 
       args '--mod', "${project.mod_id}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
       mods {
-        easy_npc {
+        "${project.mod_id}" {
           source sourceSets.main
         }
       }
