--- a/settings.gradle
+++ b/settings.gradle
@@ -20,5 +20,5 @@ pluginManagement {
   }
 }
 
-rootProject.name = 'Easy NPC'
+rootProject.name = 'Easy NPC 1.21'
 include("Common", "Fabric", "Forge", "NeoForge")
