--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=5.6.0
+version=5.7.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -33,6 +33,8 @@ jei_mod=4593548
 # timeless_and_classics_zero_mod=5529108
 armourers_workshop_mod=4987568
 better_combat_mod=
+# sophisticated_backpacks_mod=5654080
+# sophisticated_core_mod=5296312
 # better_combat_mod=4428885
 # cloth_config_mod=4973439
 # create_mod=4835188
